RAID-28: Refactored integration tests